<resources>
	<string name="apply_now_button_text">Apply Now</string>
	<string name="apply_later_button_text">Apply Later</string>
	<string name="apply_update_button_text">Apply Update</string>
	<string name="apply_title_textview_text">{0} is ready to be applied</string>
	<string name="apply_subtitle_textview_text">Release notes:</string>
	<string name="apply_unable_to_reboot_toast">Unable to reboot into recovery</string>
	<string name="apply_trying_to_get_root_access">Trying to get root access to reboot in recovery mode</string>
	<string name="available_updates_text">Please select the ROM to download:</string>
	<string name="choose_available_update_text">Download</string>
	<string name="no_updates_found_instructions">No Roms found.\nPress \'Check now\' to manually check for new updates</string>
	<string name="no_themes_found_instructions">No Themes found.\nPress \'Check now\' to manually check for new updates</string>
	<string name="downloaded_update_found_text">Updates found in Update Folder:</string>
	<string name="checking_for_updates">Checking for updates</string>
	<string name="downloading_update">Downloading update</string>
	<string name="sdcard_is_not_present_dialog_body">You will need a writable SD card to download this update</string>
	<string name="sdcard_is_not_present_dialog_title">No SDCard found</string>
	<string name="sdcard_is_not_present_dialog_ok_button">Ok</string>
	<string name="current_version_text">Running Version: {0}</string>
	<string name="delete_updates_text">Delete updates</string>
	<string name="delete_updates_success_message">Update Folder deleted</string>
	<string name="delete_updates_failure_message">There was an error deleting the Update Folder</string>
	<string name="delete_updates_noFolder_message">Update Folder not found</string>
	<string name="apply_update_dialog_title">Confirmation</string>
	<string name="apply_update_dialog_text">You are about to upgrade to {0}.\nIf you press update, the phone will restart itself in recovery mode to apply the update.</string>
	<string name="apply_update_dialog_update_button">Update</string>
	<string name="apply_update_dialog_backup_and_update_button">Backup &amp; Apply</string>
	<string name="apply_update_dialog_cancel_button">Cancel</string>
	<string name="no_updates_no_mod_text">Your system is running an unsupported OS mod (Version {0}).</string>
	<string name="check_now_button_text">Check now</string>
	<string name="menu_check_now">Check now</string>
	<string name="menu_config">Configuration</string>
	<string name="menu_about">About</string>
	<string name="menu_changelog">Changelog</string>
	<string name="menu_add_theme">Add Theme Server</string>
	<string name="menu_update_featured">Update Featured Theme Servers</string>
	<string name="menu_edit_theme">Edit Theme Server</string>
	<string name="menu_delete_theme">Delete Theme Server</string>
	<string name="menu_enable_theme">Enable Theme Server</string>
	<string name="menu_disable_theme">Disable Theme Server</string>
	<string name="menu_delete_all_themes">Delete all Theme Servers</string>
	<string name="menu_delete_all_featured_themes">Delete all Featured Theme Servers</string>
	<string name="menu_disable_all_themes">Disable all Theme Servers</string>
	<string name="menu_disable_all_featured_themes">Disable all Featured Theme Servers</string>
	<string name="menu_enable_all_themes">Enable all Theme Servers</string>
	<string name="menu_enable_all_featured_themes">Enable all Featured Theme Servers</string>
	<string name="cancel_download_buton_text">Cancel Download</string>
	<string name="confirm_download_cancelation_dialog_message">Are you sure you want to cancel the current download? You can resume it later, by downloading the same update again.</string>
	<string name="confirm_download_cancelation_dialog_yes">Yes</string>
	<string name="confirm_download_cancelation_dialog_no">No</string>
	<string name="download_canceled_toast_message">Download cancelled</string>
	<string name="verify_and_apply_dialog_title">Verifying</string>
	<string name="verify_and_apply_dialog_message">Verifying update MD5 sum</string>
	<string name="apply_existing_update_md5error_message">Error. MD5 checksum missmatch</string>
	<string name="apply_upload_info_message">THIS VERSION OF THE UPDATER HAS THE REBOOT OPTION ENABLED, SO CLICKING ON APPLY NOW WILL ACTUALLY DO SO.
PLEASE REBOOT INTO RECOVERY MANUALLY *BEFORE* APPLYING THIS UPDATE IF YOU WANT TO PERFORM A BACKUP</string>
	<string name="last_update_check_text">Last update check</string>
	<string name="overwrite_update_title">Update exists</string>
	<string name="overwrite_update_summary">The selected Update already exists in your Update Folder.\nWould you like to overwrite it?</string>
	<string name="overwrite_update_positive">Yes</string>
	<string name="overwrite_update_negative">No</string>
	<string name="no_md5_found_title">No MD5 found</string>
	<string name="no_md5_found_summary">No MD5 File according to the Update was found.\nDo you want to apply it without checking?</string>
	<string name="no_md5_found_positive">Apply</string>
	<string name="no_md5_found_negative">Cancel</string>
	<string name="notification_tickertext">Downloading Update</string>
	<string name="notification_finished">Download finished</string>
	<string name="toast_uninstall_old_Version">You have to uninstall any old Version of the App to proceed!</string>
	<string name="stable_description"> = Stable</string>
	<string name="experimental_description"> = Experimental</string>
	<string name="changelog_progress_title">Please wait ...</string>
	<string name="changelog_progress_body">Trying to download the changelog.xml</string>
	<string name="changelog_button_text">Changelog of selected Rom</string>
	<string name="no_changelog_found">No Changelog found</string>
	<string name="changelog_title_rom">Update Changelog</string>
	<string name="changelog_title_app">Application Changelog</string>
	<string name="changelog_title_theme">Theme Changelog</string>
	<string name="featured_themes_progress_title">Please wait ...</string>
	<string name="featured_themes_progress_body">Trying to download the Featured Theme Servers XML</string>
	<string name="featured_themes_finished_toast">Featured Theme Servers updated</string>
	<string name="true_string">true</string>
	<string name="false_string">false</string>
	<string name="md5_check_cancelled">MD5 Check was Cancelled</string>
	<string name="button_available_updates">Roms</string>
	<string name="button_available_themes">Themes</string>
	<string name="button_existing_updates">Existing</string>
	<string name="no_existing_updates_found">No Existing Updates found</string>
	<string name="available_themes_text">Please select the Theme to download:</string>
	<string name="choose_available_theme_text">Download</string>
	<string name="changelog_button_theme_text">Changelog of selected Theme</string>
	<string name="title_running">running</string>
	<string name="no_updatecheck_executed">No Updatecheck executed</string>
	<string name="no_theme_update_server_configured">No Theme Update Server configured.\nIf you want to use Theme Updates, go to Settings and configure a Update-Server</string>
	<string name="delete_updates_root_folder_message">You can not delete the Root Folder\nPlease delete the Updates one by one</string>
	<string name="about_dialog_title">About</string>
	<string name="barcode_scan_no_result">No result was received. Please try again.</string>
	<string name="theme_list_long_press">Long Press an Item to show options</string>
	<string name="download_info_filename">Filename: </string>
	<string name="download_info_mirror">Mirror: </string>
	<string name="download_info_downloading">Downloading...</string>
	<string name="download_info_speed">Speed: </string>
	<string name="download_info_remaining_time">Remaining Time: </string>
	<string name="p_update_check_freq_title">Update Checking frequency</string>
	<string name="p_update_check_freq_summary">Set update checking frequency</string>
	<string name="p_display_older_rom_versions_title">Display All Rom Updates</string>
	<string name="p_display_older_rom_versions_summary">Display all Rom updates, including old versions</string>
	<string name="p_allow_experimental_rom_versions_title">Display Experimental Roms</string>
	<string name="p_allow_experimental_rom_versions_summary">Display Rom updates that are Experimental (non-stable)</string>
	<string name="p_display_older_theme_versions_title">Display All Theme Updates</string>
	<string name="p_display_older_theme_versions_summary">Display all Theme updates, including old versions</string>
	<string name="p_allow_experimental_theme_versions_title">Display Experimental Themes</string>
	<string name="p_allow_experimental_theme_versions_summary">Display Theme updates that are Experimental (non-stable)</string>
	<string name="p_notification_ringtone_title">Notification Ringtone</string>
	<string name="p_notification_ringtone_summary">Choose a ringtone for Updater alerts</string>
	<string name="p_update_file_url_title">Rom Update Server</string>
	<string name="p_update_file_url_summary">Change the Rom Update Server</string>
	<string name="p_update_file_url_def_title">Reset Rom Update Server</string>
	<string name="p_update_file_url_def_summary">Reset the location of the Rom Update Server back to default</string>
	<string name="p_update_file_url_qr_title">Scan Barcode</string>
	<string name="p_update_file_url_qr_summary">Scan QR Code for Rom Update File URL</string>
	<string name="p_vibrate_title">Vibrate</string>
	<string name="p_vibrate_summary">Vibrate on Notifications</string>
	<string name="p_notifications_title">Notifications</string>
	<string name="p_notifications_summary">Enable/Disable Notifications</string>
	<string name="p_progress_update_frequency_title">Progress Update Frequency</string>
	<string name="p_progress_update_frequency_summary">Higher Values --> Less updating\nLower Values --> More updating</string>
	<string name="p_progress_update_freq_def_title">Reset Update Frequency</string>
	<string name="p_progress_update_freq_def_summary">Reset the Update Frequency of the Downloaddialog/Notificationbar</string>
	<string name="p_theme_file_title">themes.theme Path</string>
	<string name="p_theme_file_summary">Change the Path of the themes.theme File</string>
	<string name="p_theme_file_def_title">Reset themes.theme File</string>
	<string name="p_theme_file_def_summary">Set the Path of themes.theme back to default</string>
	<string name="p_notifications_screen_title">Notifications</string>
	<string name="p_notifications_screen_summary">Set Notification Settings</string>
	<string name="p_rom_screen_title">Rom Update Settings</string>
	<string name="p_rom_screen_summary">Set Settings for Rom Updates</string>
	<string name="p_theme_screen_title">Theme Update Settings</string>
	<string name="p_theme_screen_summary">Set Settings for Theme Updates</string>
	<string name="p_advanced_screen_title">Advanced Settings</string>
	<string name="p_advanced_screen_summary">Set Advanced Settings</string>
	<string name="p_update_folder_title">Update Folder</string>
	<string name="p_update_folder_summary">Set the update Folder\nSet blank for root-Directory</string>
	<string name="p_update_folder_def_title">Reset Update Folder</string>
	<string name="p_update_folder_def_summary">Set the update Folder back to default</string>
	<string name="p_theme_list_title">Manage Theme Servers</string>
	<string name="p_theme_list_summary">Add, Edit, Delete Theme Servers</string>
	<string name="p_theme_list_new_name">Theme Name:</string>
	<string name="p_theme_list_new_uri">URL:</string>
	<string name="p_theme_list_new_enabled">Enabled:</string>
	<string name="p_theme_list_new_barcode">Scan barcode</string>
	<string name="p_theme_list_new_save">Save</string>
	<string name="p_theme_list_new_cancel">Cancel</string>
	<string name="p_debug_output_title">Debug Output</string>
	<string name="p_debug_output_summary">Show Debug Output in logcat</string>
</resources>