<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <!-- Notifications -->
    <PreferenceScreen
            android:title="@string/p_notifications_screen_title"
            android:summary="@string/p_notifications_screen_summary">
        <CheckBoxPreference
                android:key="prefNotifications"
                android:title="@string/p_notifications_title"
                android:summary="@string/p_notifications_summary"
                android:defaultValue="@string/PREF_NOTIFICATION_ENABLED_DEF_VALUE"/>
        <ListPreference
                android:key="prefUpdateCheckFrequency"
                android:title="@string/p_update_check_freq_title"
                android:summary="@string/p_update_check_freq_summary"
                android:entries="@array/update_frequency"
                android:entryValues="@array/update_frequency_values"
                android:defaultValue="@string/PREF_UPDATE_CHECK_FREQUENCY_DEF_VALUE"
                android:dependency="prefNotifications"/>
        <RingtonePreference
                android:key="prefNotificationRingtone"
                android:title="@string/p_notification_ringtone_title"
                android:summary="@string/p_notification_ringtone_summary"
                android:ringtoneType="notification"
                android:dependency="prefNotifications"/>
        <CheckBoxPreference
                android:key="prefVibrate"
                android:title="@string/p_vibrate_title"
                android:summary="@string/p_vibrate_summary"
                android:defaultValue="@string/PREF_NOTIFICATION_VIBRATE_DEF_VALUE"
                android:dependency="prefNotifications"/>
    </PreferenceScreen>
    <!-- Nandroid Backup -->
    <!--
         <CheckBoxPreference android:key="doNandroidBackup"
         android:title="@string/p_do_nandroid_backup_title"
         android:summary="@string/p_do_nandroid_backup_summary"
         android:defaultValue="@string/p_do_nandroid_backup_def_value" />
     -->
    <!-- Rom -->
    <PreferenceScreen
            android:title="@string/p_rom_screen_title"
            android:summary="@string/p_rom_screen_summary">
        <CheckBoxPreference
                android:key="displayOlderRomVersions"
                android:title="@string/p_display_older_rom_versions_title"
                android:summary="@string/p_display_older_rom_versions_summary"
                android:defaultValue="@string/PREF_DISPLAY_OLDER_ROM_VERSIONS_DEF_VALUE"/>
        <CheckBoxPreference
                android:key="displayExperimentalRomVersions"
                android:title="@string/p_allow_experimental_rom_versions_title"
                android:summary="@string/p_allow_experimental_rom_versions_summary"
                android:defaultValue="@string/PREF_DISPLAY_EXPERIMENTAL_ROM_VERSIONS_DEF_VALUE"/>
        <EditTextPreference
                android:key="prefRomJsonURLGithub"
                android:title="@string/p_update_file_url_title"
                android:summary="@string/p_update_file_url_summary"
                android:dialogTitle="@string/p_update_file_url_title"
                android:defaultValue="@string/conf_update_server_url_def"
                android:singleLine="false"/>
        <Preference
                android:key="prefUpdateFileURLQr"
                android:title="@string/p_update_file_url_qr_title"
                android:summary="@string/p_update_file_url_qr_summary"/>
        <Preference
                android:key="prefUpdateFileURLDef"
                android:title="@string/p_update_file_url_def_title"
                android:summary="@string/p_update_file_url_def_summary"/>
    </PreferenceScreen>
    <!-- Theme -->
    <PreferenceScreen
            android:key="prefConfigThemes"
            android:title="@string/p_theme_screen_title"
            android:summary="@string/p_theme_screen_summary">
        <CheckBoxPreference
                android:key="displayOlderThemeVersions"
                android:title="@string/p_display_older_theme_versions_title"
                android:summary="@string/p_display_older_theme_versions_summary"
                android:defaultValue="@string/PREF_DISPLAY_OLDER_THEME_VERSIONS_DEF_VALUE"/>
        <CheckBoxPreference
                android:key="displayExperimentalThemeVersions"
                android:title="@string/p_allow_experimental_theme_versions_title"
                android:summary="@string/p_allow_experimental_theme_versions_summary"
                android:defaultValue="@string/PREF_DISPLAY_EXPERIMENTAL_THEME_VERSIONS_DEF_VALUE"/>
        <Preference
                android:key="prefThemesList"
                android:title="@string/p_theme_list_title"
                android:summary="@string/p_theme_list_summary"/>
        <EditTextPreference
                android:key="prefThemeFile"
                android:title="@string/p_theme_file_title"
                android:summary="@string/p_theme_file_summary"
                android:dialogTitle="@string/p_theme_file_title"
                android:defaultValue="@string/conf_theme_version_file_def"
                android:singleLine="false"/>
        <Preference
                android:key="prefThemeFileDef"
                android:title="@string/p_theme_file_def_title"
                android:summary="@string/p_theme_file_def_summary"/>
    </PreferenceScreen>
    <!-- Advanced Properties -->
    <PreferenceScreen
            android:title="@string/p_advanced_screen_title"
            android:summary="@string/p_advanced_screen_summary">
        <CheckBoxPreference
                android:key="prefDebugOutput"
                android:title="@string/p_debug_output_title"
                android:summary="@string/p_debug_output_summary"
                android:defaultValue="@string/PREF_DEBUG_OUTPUT_DEF_VALUE"/>
        <EditTextPreference
                android:key="prefUpdateFolderNew"
                android:title="@string/p_update_folder_title"
                android:summary="@string/p_update_folder_summary"
                android:dialogTitle="@string/p_update_folder_title"
                android:singleLine="false"/>
        <Preference
                android:key="prefUpdateFolderDef"
                android:title="@string/p_update_folder_def_title"
                android:summary="@string/p_update_folder_def_summary"/>
        <ListPreference
                android:key="progressUpdateFrequ"
                android:title="@string/p_progress_update_frequency_title"
                android:summary="@string/p_progress_update_frequency_summary"
                android:defaultValue="@string/PREF_PROGRESS_UPDATE_FREQUENCY_DEF_VALUE"
                android:entryValues="@array/progress_update_freq"
                android:entries="@array/progress_update_freq"/>
        <Preference
                android:key="progressUpdateFreqDef"
                android:title="@string/p_progress_update_freq_def_title"
                android:summary="@string/p_progress_update_freq_def_summary"/>
    </PreferenceScreen>
</PreferenceScreen>