<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_theme_list_new_name"/>
        <EditText
                android:id="@+id/new_theme_list_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_theme_list_new_uri"/>
        <EditText
                android:id="@+id/new_theme_list_uri"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_theme_list_new_enabled"/>
        <CheckBox
                android:id="@+id/new_theme_list_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
        <Button
                android:id="@+id/new_theme_list_button_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_theme_list_new_barcode"/>
        <TableLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:stretchColumns="*">
            <TableRow>
                <Button
                        android:id="@+id/new_theme_list_button_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_theme_list_new_save"/>
                <Button
                        android:id="@+id/new_theme_list_button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_theme_list_new_cancel"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>