<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal">
	    <TextView
	    	android:id="@+id/available_updates_text"
	    	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/available_updates_text"
			android:gravity="center_horizontal"
			android:layout_marginTop="10sp"
	    	style="@style/TextAppearance.Text" />
		<Spinner
			android:id="@+id/available_updates_list"
			android:layout_marginTop="20sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" />
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20sp"
			android:id="@+id/stable_experimental_description_container">
			<ImageView
				android:layout_height="24px"
				android:layout_width="24px"
				android:src="@drawable/stable" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				style="@style/TextAppearance.Text"
				android:text="@string/stable_description"
				android:textSize="16px"
				android:paddingTop="2px"
				android:layout_marginRight="20px"/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/experimental" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal" 
				style="@style/TextAppearance.Text"
				android:text="@string/experimental_description"
				android:paddingTop="2px"
				android:textSize="16px"/>
		</LinearLayout>
		
	    <Button
	    	android:id="@+id/download_update_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/choose_available_update_text"
			android:layout_marginTop="20sp"
		    style="@style/TextAppearance.Button"
		    android:drawableLeft="@drawable/download" />
		<Button
	    	android:id="@+id/show_changelog_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/changelog_button_text"
			android:layout_marginTop="20sp"
		    style="@style/TextAppearance.Button"
		    android:drawableLeft="@drawable/icon" />
		<TextView
	    	android:id="@+id/check_now_update_chooser_text"
	    	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/no_updates_found_instructions"
			android:gravity="center_horizontal"
			android:layout_marginTop="10sp"
	    	style="@style/TextAppearance.Text" />
		<Button
		    android:id="@+id/check_now_button_update_chooser"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/check_now_button_text"
			android:layout_weight="0"
			android:layout_marginTop="20sp"
		    style="@style/TextAppearance.Button"
		    android:drawableLeft="@drawable/check_now"/>
		<View
			android:id="@+id/downloaded_update_found_separator"
			android:layout_marginTop="20px"
			android:layout_marginBottom="20px"
			android:layout_width="fill_parent"
			android:layout_height="2dip"
			android:background="#FFFFFFFF" />
		<TextView
			android:id="@+id/downloaded_update_found"
	    	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/downloaded_update_found_text"
			android:layout_marginBottom="10px"
	    	style="@style/TextAppearance.Text" />
		<Spinner
			android:id="@+id/found_updates_list"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" />
		<Button
	    	android:id="@+id/apply_update_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/apply_update_button_text"
		    android:drawableLeft="@drawable/verify_and_apply"
		    style="@style/TextAppearance.Button" />
		<Button
	    	android:id="@+id/delete_updates_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete_updates_text"
		    style="@style/TextAppearance.Button"
		    android:drawableLeft="@drawable/check_now" />
		<TextView
		    android:id="@+id/last_update_check"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10px"
			android:layout_marginRight="10px"
			android:layout_gravity="bottom|right" />
		<TextView
	    	android:id="@+id/experimental_updates_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10px"
			android:layout_marginRight="10px"
			android:layout_gravity="bottom|right" />
		<TextView
	    	android:id="@+id/show_downgrades_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10px"
			android:layout_marginRight="10px"
			android:layout_gravity="bottom|right" />
		<TextView
		    android:id="@+id/up_chooser_current_version"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10px"
			android:layout_marginRight="10px"
			android:layout_gravity="bottom|right" />
	
	</LinearLayout>
</ScrollView>