<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TextView
            android:id="@+id/apply_title_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.Text"/>
    <TextView
            android:id="@+id/apply_subtitle_textview"
            android:text="@string/apply_subtitle_textview_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.Subtitle"/>
    <EditText
            android:id="@+id/apply_release_notes"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_margin="10px"
            android:editable="false"
            android:scrollbars="vertical"
            android:text="@string/apply_upload_info_message"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/apply_now_button"
                android:text="@string/apply_now_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/apply_now"/>
        <View
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>
        <Button
                android:id="@+id/apply_later_button"
                android:text="@string/apply_later_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/apply_later"/>
    </LinearLayout>
</LinearLayout>